Se agrega método de abandonar juego

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "pca",
+    "name": "casino-api",
     "version": "1.0.0",
     "description": "Backend realizado como prueba de desarrollo para pca ingenieria",
     "main": "index.js",
